Update media handling: expanded supported file formats in web_player.py, changed audio element to video in index.html, and updated references in player.js.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <button id="shuffleBtn">Shuffle &amp; Play</button>
     <button id="stopBtn">Stop</button>
   </div>
-  <audio id="audio" controls style="width:100%; margin-top: 10px;"></audio>
+  <video id="player" controls style="width:100%; max-height:60vh; margin-top: 10px;" playsinline></video>
   <ul id="tracklist"></ul>
 
   <script src="/static/player.js"></script>
