--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,10 @@
 <body>
   <h1>Local Playlist Player</h1>
   <div>
-    <button id="shuffleBtn">Shuffle &amp; Play</button>
+    <button id="prevBtn">⏮ Prev</button>
+    <button id="playBtn">▶️ Play/Pause</button>
+    <button id="nextBtn">Next ⏭</button>
+    <button id="shuffleBtn">Shuffle</button>
     <button id="stopBtn">Stop</button>
   </div>
   <video id="player" controls style="width:100%; max-height:60vh; margin-top: 10px;" playsinline></video>
