--- a/templates/tracks.html
+++ b/templates/tracks.html
@@ -30,6 +30,8 @@
         <th>Type</th>
         <th>Starts</th>
         <th>Finishes</th>
+        <th>Last Start</th>
+        <th>Last Finish</th>
       </tr>
     </thead>
     <tbody>
@@ -46,9 +48,11 @@
           <td>{{ t['filetype'] }}</td>
           <td>{{ t['play_starts'] }}</td>
           <td>{{ t['play_finishes'] }}</td>
+          <td>{{ t['last_start_ts'] or '-' }}</td>
+          <td>{{ t['last_finish_ts'] or '-' }}</td>
         </tr>
       {% else %}
-        <tr><td colspan="11">Database is empty. Run <code>python scan_to_db.py</code> first.</td></tr>
+        <tr><td colspan="13">Database is empty. Run <code>python scan_to_db.py</code> first.</td></tr>
       {% endfor %}
     </tbody>
   </table>
