--- a/templates/index.html
+++ b/templates/index.html
@@ -103,6 +103,7 @@
     <button id="playBtn">▶️ Play/Pause</button>
     <button id="nextBtn">Next ⏭</button>
     <button id="shuffleBtn">Shuffle</button>
+    <button id="smartShuffleBtn">Smart Shuffle</button>
     <button id="stopBtn">Stop</button>
     <button id="fullBtn">Fullscreen ⛶</button>
     <button id="toggleListBtn" class="toggle-btn-header">☰ Hide playlist</button>
