--- a/templates/index.html
+++ b/templates/index.html
@@ -117,6 +117,7 @@
           <button id="cPrev" class="ctrl-btn">⏮</button>
           <button id="cPlay" class="ctrl-btn">▶️</button>
           <button id="cNext" class="ctrl-btn">⏭</button>
+          <button id="cLike" class="ctrl-btn" title="Like">🎧❤️</button>
           <google-cast-launcher id="castBtn" class="cast-btn" title="Play on TV"></google-cast-launcher>
           <button id="cMute" class="ctrl-btn">🔊</button>
           <input type="range" id="cVol" min="0" max="1" step="0.05" value="1" class="vol-slider" />
